--- a/web/api_index.html
+++ b/web/api_index.html
@@ -28,7 +28,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "http://localhost:9292/swagger.json";
+        url = window.location.origin + "/swagger.json";
       }
       window.swaggerUi = new SwaggerUi({
         url: url,
